--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: NLP
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - aiohappyeyeballs=2.4.0=py311haa95532_0
@@ -29,8 +30,8 @@ dependencies:
   - brotli-python=1.0.9=py311hd77b12b_8
   - bzip2=1.0.8=h2bbff1b_6
   - c-ares=1.19.1=h2bbff1b_0
-  - ca-certificates=2024.9.24=haa95532_0
-  - certifi=2024.8.30=py311haa95532_0
+  - ca-certificates=2024.8.30=h56e8100_0
+  - certifi=2024.8.30=pyhd8ed1ab_0
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
   - colorama=0.4.6=py311haa95532_0
   - comm=0.2.1=py311haa95532_0
@@ -160,6 +161,7 @@ dependencies:
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - wheel=0.44.0=py311haa95532_0
   - win_inet_pton=1.1.0=py311haa95532_0
+  - wordcloud=1.9.3=py311h2bbff1b_0
   - xxhash=0.8.0=h2bbff1b_3
   - xz=5.4.6=h8cc25b3_1
   - yaml=0.2.5=he774522_0
@@ -167,4 +169,4 @@ dependencies:
   - zeromq=4.3.5=hd77b12b_0
   - zlib=1.2.13=h8cc25b3_1
   - zstd=1.5.5=hd43e919_2
-prefix: C:\Users\alexa\anaconda3\envs\NLP
+prefix: C:\Users\Alex\anaconda3\envs\NLP
